--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-django
-djangorestframework
-django-cors-headers
-djangorestframework-simplejwt
-mysqlclient
-gensim
-konlpy
-numpy
+asgiref==3.6.0
+Django==4.2.1
+django-cors-headers==3.14.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+gensim==4.3.1
+JPype1==1.4.1
+konlpy==0.6.0
+lxml==4.9.2
+mysqlclient==2.1.1
+numpy==1.24.3
+packaging==23.1
+PyJWT==2.6.0
+pytz==2023.3
+scikit-learn==1.1.2
+scipy==1.10.1
+smart-open==6.3.0
+sqlparse==0.4.4
+tzdata==2023.3
